Add score from charity boxes to api
